k8s/service.yml
---
apiVersion:       v1
kind:             Service
metadata:
  name:           ngs-inv8
  namespace:      jenkins
  labels:
    app:          ngs-inv8
spec:
  type:           ClusterIP
  ports:
  - port:         8888
    protocol:     TCP
    targetPort:   8888
  selector:
    app:          ngs-inv8
